--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>GitPort</title>
 </head>
 <body>
-    <title>Hello World</title>
+    <center><h1>Hello World</h1></center>
 </body>
 </html>
