website templete added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>GitPort</title>
+	<title>
+		GitPort
+	</title>
+	<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/normalize.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>
+		<script src="js/function.js"></script>
+		<link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta charset="utf-8" />
+		<meta name=”keywords” content="developer, youtube vlogger, enthusiast, nodejs" />
+		
+		
+		<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-27142446-9', 'auto');
+		ga('send', 'pageview');
+		</script>
 </head>
-<body>
-    <center><h1>Hello World</h1></center>
-</body>
+	<body class="noTransition">
+		<main>
+		<div class="container">
+			<div class="textContainer">
+				<div class="jstext"></div>
+			</div>
+			<div class="afterTyping">
+				<section id="about">
+					<div class="shortColumn info">
+						<h4>About Me</h4>
+						<div>
+							// details 
+						</div>
+					</div>
+					</div>
+				</section>
+
+				<section id="contact">
+					<div class="shortColumn info">
+						<h4>get in touch</h4>
+					<div class="container">
+						<br>
+					<div class="social">
+					  <a href="https://www.facebook.com/roueg" class="link facebook" target="_parent"><span class="fa fa-facebook-square"></span></a>
+					  <a href="mailto:msintaha94@gmail.com" class="link google-plus" target="_parent"><span class="fa fa-envelope"></span></a>
+					  <a href="https://bd.linkedin.com/in/ratul16" class="link linkedin" target="_parent"><span class="fa fa-linkedin-square"></span></a>
+					  <a href="https://github.com/ratul16" class="link github" target="_parent"><span class="fa fa-github-square"></span></a>
+					</div>
+					</div>
+				</section>
+
+				<section id="features">
+					<div class="shortColumn info">
+						<h4>Github Repositories</h4>
+						<h3>If you don't concentrate on classes enough, check out my <a style="border-bottom: 2px solid white;" href="https://www.youtube.com/c/MiftaSintahaCS?sub_confirmation=1" title="Click Me!">YouTube</a> Channel for CS based tuts! [Specially ones that are hard to find]</h3>
+					</div>
+					<div>
+		
+					</div>
+				</section>
+			</div>            
+		</div>
+		</main>
+	</body>
 </html>
