animation changed ,font size changed ,animation duration changed

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta charset="utf-8" />
 		<meta name=”keywords” content="developer, youtube vlogger, enthusiast, nodejs" />
+		<link rel="icon" type="image/png" sizes="16x16" href="img\hydra.jpg">
 		
 		
 		<script>
@@ -42,6 +43,16 @@
 					</div>
 				</section>
 
+				<section id="features">
+					<div class="shortColumn info">
+						<h4>Github Repositories</h4>
+						<h3>Here are some of the project that i have done</h3>
+					</div>
+					<div>
+		
+					</div>
+				</section>
+
 				<section id="contact">
 					<div class="shortColumn info">
 						<h4>get in touch</h4>
@@ -49,22 +60,14 @@
 						<br>
 					<div class="social">
 					  <a href="https://www.facebook.com/roueg" class="link facebook" target="_parent"><span class="fa fa-facebook-square"></span></a>
-					  <a href="mailto:msintaha94@gmail.com" class="link google-plus" target="_parent"><span class="fa fa-envelope"></span></a>
+					  <a href="mailto:haratul@gmail.com" class="link google-plus" target="_parent"><span class="fa fa-envelope"></span></a>
 					  <a href="https://bd.linkedin.com/in/ratul16" class="link linkedin" target="_parent"><span class="fa fa-linkedin-square"></span></a>
 					  <a href="https://github.com/ratul16" class="link github" target="_parent"><span class="fa fa-github-square"></span></a>
 					</div>
 					</div>
 				</section>
 
-				<section id="features">
-					<div class="shortColumn info">
-						<h4>Github Repositories</h4>
-						<h3>If you don't concentrate on classes enough, check out my <a style="border-bottom: 2px solid white;" href="https://www.youtube.com/c/MiftaSintahaCS?sub_confirmation=1" title="Click Me!">YouTube</a> Channel for CS based tuts! [Specially ones that are hard to find]</h3>
-					</div>
-					<div>
-		
-					</div>
-				</section>
+				
 			</div>            
 		</div>
 		</main>
