page title added , new text added,color changed

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </head>
 	<body class="noTransition">
 		<main>
+			<h2><center>{ GitPort }</center></h2>
 		<div class="container">
 			<div class="textContainer">
 				<div class="jstext"></div>
