--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta charset="utf-8" />
 		<meta name=”keywords” content="developer, youtube vlogger, enthusiast, nodejs" />
-		<link rel="icon" type="image/png" sizes="16x16" href="img\hydra.jpg">
-		
+		<link rel="icon" type="image/png" sizes="16x16" href="img\icons8-hydra.png">
 		
 		<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
