--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 					<div class="shortColumn info">
 						<h3># About Me</h3>
 						<div id="text_info">
-							Details about me "I Am Not Perfect But I Am *Limited* Edition !! "
+							"Calm & Quiet"
+							<br>
 							"I Am Not Perfect But I Am *Limited* Edition !! "
 						</div>
 					</div>
@@ -97,6 +98,7 @@
 					<div class="shortColumn info">
 						<h4>get in touch</h4>
 					<div class="container">
+						<br>
 						<br>
 					<div class="social">
 					  <a href="https://www.facebook.com/roueg" class="link facebook" target="_parent"><span class="fa fa-facebook-square"></span></a>
