--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 							</tr>
 
 							<tr>
-									<td scope="row" data-label="Repo Name">Nsu Faculty Finder</td>
-									<td data-label="Link"><a href="https://github.com/ratul16" class="github" target="_parent"><span class="fa fa-github-square"></span></a></td>
-									<<td data-label="Download"><button type="button" class="btn"><a href="https://github.com/ratul16" class="github" target="_parent">Download</a></button></td>
+									<td scope="row" data-label="Repo Name">Simple Portfolio</td>
+									<td data-label="Link"><a href="https://github.com/ratul16/simpleportfolio" class="github" target="_parent"><span class="fa fa-github-square"></span></a></td>
+									<<td data-label="Download"><button type="button" class="btn"><a href="https://github.com/ratul16/simpleportfolio/archive/master.zip" class="github" target="_parent">Download</a></button></td>
 								</tr>
 							
 						</tbody>
@@ -97,15 +97,15 @@
 				<section id="contact">
 					<div class="shortColumn info">
 						<h4>get in touch</h4>
-					<div class="container">
-						<br>
-						<br>
-					<div class="social">
-					  <a href="https://www.facebook.com/roueg" class="link facebook" target="_parent"><span class="fa fa-facebook-square"></span></a>
-					  <a href="mailto:haratul@gmail.com" class="link google-plus" target="_parent"><span class="fa fa-envelope"></span></a>
-					  <a href="https://bd.linkedin.com/in/ratul16" class="link linkedin" target="_parent"><span class="fa fa-linkedin-square"></span></a>
-					  <a href="https://github.com/ratul16" class="link github" target="_parent"><span class="fa fa-github-square"></span></a>
-					</div>
+						<div class="container">
+							<br><br>
+							<div class="social">
+								<a href="https://www.facebook.com/roueg" class="link facebook" target="_parent"><span class="fa fa-facebook-square"></span></a>
+								<a href="mailto:haratul@gmail.com" class="link google-plus" target="_parent"><span class="fa fa-envelope"></span></a>
+								<a href="https://bd.linkedin.com/in/ratul16" class="link linkedin" target="_parent"><span class="fa fa-linkedin-square"></span></a>
+								<a href="https://github.com/ratul16" class="link github" target="_parent"><span class="fa fa-github-square"></span></a>
+							</div>
+						</div>
 					</div>
 				</section>
 
