personal info added

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
 					<div class="shortColumn info">
 						<h3># About Me</h3>
 						<div id="text_info">
-							"Calm & Quiet"
 							<br>
-							"I Am Not Perfect But I Am *Limited* Edition !! "
+							Sub-Executive
+							<br>
+							Operation and Promotion Team
+							<br>
+							NSU ACM Student Chapter
 						</div>
+						
 					</div>
 					</div>
 				</section>
