--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 						<h3># About Me</h3>
 						<div id="text_info">
 							<br>
-							Sub-Executive
-							<br>
-							Operation and Promotion Team
+							Sub-Executive, Operation and Promotion Team
 							<br>
 							NSU ACM Student Chapter
 						</div>
