--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 					<div class="shortColumn info">
 						<h3># About Me</h3>
 						<div id="text_info">
+							Studying <strong>CSE</strong> at North South University
 							<br>
-							Sub-Executive, Operation and Promotion Team
+							<strong>Sub-Executive</strong>, Operations and Promotions Team
 							<br>
 							NSU ACM Student Chapter
 						</div>
