Revert "Revert "favicon changed""
This reverts commit 87f0adbb7800895655465e44ff322010f2662cf4.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta charset="utf-8" />
 		<meta name=”keywords” content="developer, youtube vlogger, enthusiast, nodejs" />
-		<link rel="icon" type="image/png" sizes="16x16" href="img\icons8-hydra.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="img\hydra.png">
 		
 </head>
 	<body class="noTransition">
