--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<div id="text_info">
 							Studying <strong>CSE</strong> at North South University
 							<br>
-							<strong>Sub-Executive</strong>, Operations and Promotions Team
+							<strong>Former Sub-Executive</strong>, Operations and Promotions Team
 							<br>
 							NSU ACM Student Chapter
 						</div>
